client/src/styles/home.css
.home-section-1, .testimonials {
    display: grid;
    text-align: center;
    column-gap: 3em;
    padding: 3.5em;
}

.home-section-1, .horses-link {
    color: var(--platinum);
}

.home-section-1 {
    background-color: var(--hunter-green);
    grid-template-columns: 40% 60%;
}

.home-section-1 h3, .home-section-1 p {
    margin: 0;
    place-self: center;
}

.home-section-1 h3, .testimonials h3 {
    font-size: 2.5em;
    font-weight: normal;
}

.home-section-1 p {
    font-size: 2em;
    padding: 0 3.5em
}

.testimonials {
    grid-template-columns: 1fr 1fr;
    column-gap: 6em;
    color: var(--english-violet);
    width: 100%;
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: var(--platinum);
    background-blend-mode: overlay;
    box-sizing: border-box;
    padding: 3.5em;
}

.testimonials h3 {
    grid-column: span 2;
    margin: 0;
}

.testimonials p {
    font-size: 2em;
}

